tests/fixtures/invalid/operator_add_bool_int.torel
unit fixtures.operator_add_bool_int;

export proc main() -> Int32 {
    true + 1
}
